<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:summary="@string/pref_header_alarm_summary"
        android:title="@string/pref_header_alarm_title" >
        <intent
            android:action="com.grt_team.wakeup.PREFS_ALARM"
            android:targetClass="com.grt_team.wakeup.SettingsActivity"
            android:targetPackage="com.grt_team.wakeup" />
    </Preference>
    <Preference
        android:summary="@string/pref_header_puzzle_summary"
        android:title="@string/pref_header_puzzle_title" >
        <intent
            android:action="com.grt_team.wakeup.PREFS_PUZZLE"
            android:targetClass="com.grt_team.wakeup.SettingsActivity"
            android:targetPackage="com.grt_team.wakeup" />
    </Preference>

</PreferenceScreen>