<preference-headers xmlns:android="http://schemas.android.com/apk/res/android" >

    <header
        android:id="@+id/pref_header_settings"
        android:fragment="com.grt_team.wakeup.fragment.SettingsFragment"
        android:summary="@string/pref_header_alarm_summary"
        android:title="@string/pref_header_alarm_title" >
        <extra
            android:name="settings"
            android:value="preference_alarm" />
    </header>
    <header
        android:id="@+id/pref_header_puzzle"
        android:fragment="com.grt_team.wakeup.fragment.SettingsFragment"
        android:summary="@string/pref_header_puzzle_summary"
        android:title="@string/pref_header_puzzle_title" >
        <extra
            android:name="settings"
            android:value="preference_puzzle" />
    </header>

</preference-headers>