<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/alarm_dialog_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_medium"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher" />

        <com.grt_team.wakeup.view.DateTimeView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_medium"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:textIsSelectable="false"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textIsSelectable="false"
                android:textSize="48sp" />
        </com.grt_team.wakeup.view.DateTimeView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp" >

        <Button
            android:id="@+id/alarm_button_snooze"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/borderless"
            android:text="@string/alarm_button_snooze"
            android:textAllCaps="true"
            android:textColor="@android:color/secondary_text_dark" />

        <View
            android:id="@+id/alarm_dialog_button_divider1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/alarm_button_dismiss"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/borderless"
            android:text="@string/alarm_button_dismiss"
            android:textAllCaps="true"
            android:textColor="@android:color/secondary_text_dark" />

        <View
            android:id="@+id/alarm_dialog_button_divider2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/alarm_button_puzzle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/borderless"
            android:text="@string/alarm_button_puzzle"
            android:textAllCaps="true"
            android:textColor="@android:color/secondary_text_dark" />
    </LinearLayout>

</LinearLayout>